# meshi-bb

./: .gitmodules  CMakeLists.txt  Makefile  README.md  bb  client_controller.cpp  client_controller.h  cprintf.cpp  cprintf.h  errors.cpp  i2cmaster.cpp  i2cmaster.h  main.cpp  sensor_i2c.cpp  sensor_i2c.h  testserver.py  transmission_debug.cpp  transmission_debug.h
i2c/: Makefile  avr.txt  binary.elf  build.bat  flash.bat  i2ctest.hex  i2ctest.rar  iomacros.h  main - Kopie (2).c  main - Kopie.c  main.c  other.rar  set_fuses.bat  usitwislave.c  usitwislave_devices.h
i2c/usbasp_driver/: USBasp.inf
libs/: escapi.cpp
public/: controller.h  errors.h  i2cmeshi.h  protocol.h  sensor.h  transmission.h  transport.h
src/: blackbox  blackbox.h  client_controller.cpp  client_controller.h  cmake_install.cmake  cprintf.cpp  cprintf.h  crc32.cpp  crc32.h  errors.cpp  i2cmaster.cpp  i2cmaster.h  main.cpp  message_builder.cpp  message_builder.h  plat_compat.cpp  plat_compat.h  sensor_camera.cpp  sensor_camera.h  sensor_i2c.cpp  sensor_i2c.h  sensor_temp.cpp  sensor_temp.h  sensor_thermal.cpp  sensor_thermal.h  transmission_debug.cpp  transmission_debug.h  transport_debug.cpp  transport_debug.h  webcam.h  webcam_opencv.cpp  webcam_win32.cpp
src/drivers/: MAX30105.cpp  MAX30105.h
src/minmea/: minmea.c
src/wincompat/: getopt.h  qedit.h  webcam_win32.cpp
